extend: guide+faq, fix CSS alignment invoicestring

--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -208,7 +208,7 @@ title {
   word-wrap: break-word; /* IE */
 }
 
-#invoicestring-renew {
+#invoicestringrenew {
   text-align: center;
   margin-top: 10px;
   display: inline-block;
